--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-google-oauth2": "^1.5.8",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.2.0",
+    "vue-slick-carousel": "^1.0.6",
     "vue-sweetalert2": "^5.0.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
